--- a/src/main/webapp/html/MaintenanceTaskDispatcher.html
+++ b/src/main/webapp/html/MaintenanceTaskDispatcher.html
@@ -421,6 +421,11 @@
                 engineer: '',
                 maintenanceTaskData: []
             }
+        },
+        methods: {
+            handleCurrentChange: function (currentRow){
+                this.$emit('post-row',currentRow);
+            }
         }
     }
 </script>
@@ -431,17 +436,25 @@
             <el-col :span="20">
                 <div :style="style.container">
                     <h3>任务检索</h3>
-                    <maintenance-task-filter></maintenance-task-filter>
+                    <maintenance-task-filter
+                            @post-row="handleRow"
+                    ></maintenance-task-filter>
                 </div>
                 <br>
                 <div :style="style.container">
                     <h3>详情</h3>
                     <h4>客户信息</h4>
-                    <customer-info-readonly></customer-info-readonly>
+                    <customer-info-readonly
+                            :info="customerInfoData"
+                    ></customer-info-readonly>
                     <h4>设备信息</h4>
-                    <device-info-readonly></device-info-readonly>
+                    <device-info-readonly
+                            :info="deviceInfoData"
+                    ></device-info-readonly>
                     <h4>维修信息</h4>
-                    <task-info-readonly></task-info-readonly>
+                    <task-info-readonly
+                            :info="taskInfoData"
+                    ></task-info-readonly>
                     <h4>技术人员信息</h4>
                     <el-button type="primary" @click="handleClick">选择技术人员</el-button>
                     <div :style="style.container" v-show="visible.userFilter.value">
@@ -462,9 +475,13 @@
             'device-info-readonly': deviceInfoReadOnly,
             'task-info-readonly': taskInfoReadOnly,
             //'report-info-readonly': reportInfoReadOnly
+            //'user-info-readonly': userInfoReadOnly
         },
         data: function (){
             return {
+                customerInfoData: {},
+                deviceInfoData: {},
+                taskInfoData: {},
                 style: {
                     container: {
                         padding: '20px',
@@ -477,7 +494,10 @@
             }
         },
         methods: {
-            handleClick() {
+            handleRow: function (row) {
+                //将信息分发给4个显示组件
+            },
+            handleClick: function () {
                 this.visible.userFilter.value = true;
             }
         }
