--- a/src/main/webapp/html/CustomerService.html
+++ b/src/main/webapp/html/CustomerService.html
@@ -149,29 +149,29 @@
     <div>
         <el-row :gutter="20">
             <el-col :span="8">
-                <p>身份证号：{{idcard}}</p>
+                <span>身份证号：{{idcard}}</span>
             </el-col>
             <el-col :span="8">
-                <p>客户类型：{{customerType}}</p>
+                <span>客户类型：{{customerType}}</span>
             </el-col>
             <el-col :span="8">
-                <p>单位名称：{{companyName}}</p>
+                <span>单位名称：{{companyName}}</span>
             </el-col>
         </el-row>
-        <el-row>
+        <el-row :gutter="20">
             <el-col :span="8">
-                <p>联系人：{{customerName}}</p>
+                <span>联系人：{{customerName}}</span>
             </el-col>
             <el-col :span="8">
-                <p>联系电话：{{phone}}</p>
+                <span>联系电话：{{phone}}</span>
             </el-col>
             <el-col :span="8">
-                <p>e-mail：{{email}}</p>
+                <span>e-mail：{{email}}</span>
             </el-col>
         </el-row>
-        <el-row>
+        <el-row :gutter="20">
             <el-col :span="16">
-                <p>地址：{{address}}</p>
+                <span>地址：{{address}}</span>
             </el-col>
         </el-row>
     </div>
@@ -469,7 +469,7 @@
 </script>
 
 <!-- 报修信息组件
-
+     发送数据：post-report-info
 -->
 <template id="reportInfo">
     <div @mouseleave="postInfo">
@@ -529,6 +529,77 @@
                     reportStatus: this.reportStatus
                 };
                 this.$emit('post-report-info',info);
+            }
+        }
+    }
+</script>
+
+<!-- 报修信息筛选器组件
+     发送数据：post-row
+ -->
+<template id="reportInfoFilter">
+    <div>
+        <el-row :gutter="20">
+            <el-col :span="4">
+                <el-input v-model="customerName" placeholder="联系人"></el-input>
+            </el-col>
+            <el-col :span="4">
+                <el-input v-model="phone" placeholder="移动电话"></el-input>
+            </el-col>
+            <el-col :span="4">
+                <el-input v-model="reportTime" placeholder="报修时间"></el-input>
+            </el-col>
+            <el-col :span="4">
+                <el-button type="primary" icon="el-icon-search">搜索</el-button>
+            </el-col>
+        </el-row>
+        <el-row>
+            <el-col :span="24">
+                <el-table
+                        stripe
+                        :data="reportData"
+                        highlight-current-row
+                        @row-click="handleCurrentChange"
+                        width="100%">
+                    <el-table-column
+                            label="联系人"
+                            prop="customerName"
+                    ></el-table-column>
+                    <el-table-column
+                            label="移动电话"
+                            prop="phone"
+                    ></el-table-column>
+                    <el-table-column
+                            label="报修时间"
+                            prop="repairTime"
+                    ></el-table-column>
+                    <el-table-column
+                            label="产品类型"
+                            prop="deviceType"
+                    ></el-table-column>
+                    <el-table-column
+                            label="品牌"
+                            prop="brand"
+                    ></el-table-column>
+                </el-table>
+            </el-col>
+        </el-row>
+    </div>
+</template>
+<script>
+    var reportInfoFilter = {
+        template: '#reportInfoFilter',
+        data: function (){
+            return {
+                customerName: '',
+                phone: '',
+                reportTime: '',
+                reportData: [],
+            }
+        },
+        methods: {
+            handleCurrentChange :function (currentRow) {
+                this.$emit('post-row',currentRow);
             }
         }
     }
@@ -654,6 +725,74 @@
     }
 </script>
 
+<!-- 维护报修记录功能模块
+     组件：1.报修记录筛选器组件
+          2.用户信息显示组件
+          3.设备信息组件
+          4.报修信息组件
+-->
+<template id="manipulateMaintenanceReport">
+    <div>
+        <el-row>
+            <el-col :span="20">
+                <div :style="style.container">
+                    <report-info-filter></report-info-filter>
+                </div>
+                <div :style="style.container">
+                    <el-row :gutter="20">
+                        <el-col :span="16">
+                            <h3>编辑</h3>
+                        </el-col>
+                        <el-col :span="2">
+                            <el-button type="primary" plain size="small">保存更改</el-button>
+                        </el-col>
+                        <el-col :span="2">
+                            <el-button type="primary" plain size="small">撤销报修</el-button>
+                        </el-col>
+                        <el-col :span="2">
+                            <el-button type="primary" plain size="small">打印确认单</el-button>
+                        </el-col>
+                        <el-col :span="2">
+                            <el-button type="primary" plain size="small">确认报修</el-button>
+                        </el-col>
+                    </el-row>
+                    <h4>客户信息</h4>
+                    <customer-info-readonly></customer-info-readonly>
+                    <h4>设备信息</h4>
+                    <device-info></device-info>
+                    <h4>报修信息</h4>
+                    <report-info></report-info>
+                </div>
+            </el-col>
+        </el-row>
+    </div>
+</template>
+<script>
+    var manipulateMaintenanceReport = {
+        template: '#manipulateMaintenanceReport',
+        components: {
+            'report-info-filter': reportInfoFilter,
+            'customer-info-readonly': customerInfoReadOnly,
+            'device-info': deviceInfo,
+            'report-info': reportInfo
+        },
+        data: function () {
+            return {
+                style: {
+                    container: {
+                        margin: '20px',
+                        padding: '20px',
+                        boxShadow: '0 2px 12px 0 rgba(0, 0, 0, 0.1)'
+                    }
+                }
+            }
+        },
+        methods: {
+
+        },
+
+    }
+</script>
 <!-- 新建客户信息功能模块
      组件：1.用户信息组件
 -->
@@ -848,7 +987,8 @@
             'nav-bar': navBar,
             'new-maintenance-report': newMaintenanceReport,
             'new-customer-info': newCustomerInfo,
-            'manipulate-customer-info': manipulateCustomerInfo
+            'manipulate-customer-info': manipulateCustomerInfo,
+            'manipulate-maintenance-report': manipulateMaintenanceReport
         },
         data: {
             activeComponentName: ''
@@ -864,6 +1004,9 @@
                 }
                 if(selected == '2-1') {
                     this.activeComponentName = 'new-maintenance-report'
+                }
+                if(selected == '2-2') {
+                    this.activeComponentName = 'manipulate-maintenance-report'
                 }
             }
         },
