--- a/src/main/webapp/html/Engineer.html
+++ b/src/main/webapp/html/Engineer.html
@@ -1,10 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
-<body>
 
+    <!-- 引入样式 -->
+    <link rel="stylesheet" href="https://unpkg.zhimg.com/element-ui@2.14.1/lib/theme-chalk/index.css">
+</head>
+<body style="height: 100%; margin: 0">
+<div id="app" style="height: 100%">
+    <el-container :style="{height: '100%', overflow: 'hidden'}">
+        <el-aside :style="{background: '#545c64'}">
+            <el-container>
+                <el-main>
+                    <nav-bar></nav-bar>
+                </el-main>
+                <el-footer>
+
+                </el-footer>
+            </el-container>
+        </el-aside>
+        <el-main :style="{height: '100%', overflow: 'auto'}">
+            <div style="padding: 20px;">
+                <component :is="activeComponentName"></component>
+            </div>
+        </el-main>
+    </el-container>
+</div>
+
+<!-- Vue -->
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<!-- 引入Element组件库 -->
+<script src="https://unpkg.zhimg.com/element-ui/lib/index.js"></script>
+<!-- 引入axios -->
+<script src="https://unpkg.zhimg.com/axios/dist/axios.min.js"></script>
+<!-- 维修任务组件
+
+-->
+<template id="taskInfo">
+    <div>
+        <el-row :gutter="20">
+            <el-col :span="6">
+                <label>分配时间</label>
+                <el-input v-model="distributeTime" placeholder="分配时间"></el-input>
+            </el-col>
+            <el-col :span="6">
+                <label>维修时间</label>
+                <el-input v-model="repairTime" placeholder="维修时间"></el-input>
+            </el-col>
+            <el-col :span="6">
+                <label>人工费</label>
+                <el-input v-model="laborCost" placeholder="人工费"></el-input>
+            </el-col>
+            <el-col :span="6">
+                <label>材料费</label>
+                <el-input v-model="materialCost" placeholder="材料费"></el-input>
+            </el-col>
+        </el-row>
+        <el-row :gutter="20">
+            <el-col :span="24">
+                <label>检测记录</label>
+                <el-input v-model="detectRecordDescription" placeholder="检测记录"></el-input>
+            </el-col>
+        </el-row>
+        <el-row :gutter="20">
+            <el-col :span="24">
+                <label>维修记录</label>
+                <el-input v-model="repairRecordDescription" placeholder="维修记录"></el-input>
+            </el-col>
+        </el-row>
+    </div>
+</template>
+<script>
+    var taskInfo = {
+        template: '#taskInfo',
+        data: function () {
+            return {
+                distributeTime: '',
+                repairTime: '',
+                laborCost: '',
+                materialCost: ''
+            }
+        },
+
+    }
+</script>
+<!-- 导航栏模块 -->
+<template id="navBar">
+    <div>
+        <el-menu
+                background-color="#545c64"
+                text-color="#fff"
+                active-text-color="#ffd04b"
+                :style="{border: '0'}">
+            <el-menu-item index="1">
+                <span>我的任务</span>
+            </el-menu-item>
+        </el-menu>
+    </div>
+</template>
+<script>
+    var navBar = {
+        template: '#navBar'
+    }
+</script>
+
+<script>
+    var app = new Vue({
+        el: '#app',
+        components: {
+            'nav-bar': navBar,
+            'task-info': taskInfo,
+        },
+        data: {
+            activeComponentName: '',
+        },
+        mounted() {
+            this.activeComponentName = 'task-info';
+        }
+    })
+</script>
 </body>
 </html>
